2008-06-10  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/build-basic-autotools/build-basic-autotools.c:
	Fix #534523: anjuta parses filenames from make wrong
	GMatchInfo need to be freed even when regex fail in build_get_summary

2008-06-09  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/tools/plugin.c:
	Fix #537134: critical warnings tools->plugin_deactivate

2008-06-09  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-browser/plugin.c (project_root_removed):
	Fixed #537398 – crash in Anjuta IDE: Closed project

2008-06-07  Johannes Schmid  <jhs@gnome.org>

	Patch from Marc Lorber:
	* libanjuta/anjuta-plugin-manager.c (plugin_set_update),
	(anjuta_plugin_manager_get_remembered_plugins_page):
	Add translation
	
	Patch from Arun Raghavan:
	* manuals/anjuta-manual/C/debugger.xml:
	#536889 – anjuta doesn't pass "make check"

2008-06-07  Johannes Schmid <jhs@gnome.org>

	* plugins/symbol-db/Makefile.am:
	Put tables.sql into distribution

2008-06-07  Massimo Cora'  <maxcvs@email.it>

  Reviewed by: Johannes Schmid <jhs@gnome.org>

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/class-inheritance/class-inherit.c
	(class_inheritance_show_dynamic_class_popup_menu),
	(cls_inherit_add_node), (cls_inherit_draw_expanded_node),
	(class_inheritance_update_graph):
	* plugins/language-support-cpp-java/cpp-java-assist.c
	(create_completion),
	(cpp_java_assist_create_word_completion_cache),
	(cpp_java_assist_show_calltip):
	* plugins/profiler/gprof-view.c (gprof_view_show_symbol_in_editor):
	* plugins/symbol-browser/plugin.c (isymbol_manager_search):
	* plugins/symbol-db/plugin.c (isymbol_manager_search):
	* plugins/symbol-db/plugin.h:
	* plugins/symbol-db/symbol-db-engine.c
	(symbol_db_engine_find_symbol_by_name_pattern_filtered):
	* plugins/symbol-db/symbol-db-engine.h:
	* plugins/symbol-db/symbol-db-view.c (prepare_for_adding):
	now search for symbols can be done also in global tags. Added a new parameter